[package]
name = "morphine"
version = "0.1.0"
edition = "2021"
authors = ["Sandro Sgier"]
repository = "https://github.com/ssgier/morphine"
readme = "README.md"
keywords = ["neuromorphic", "snn"]
categories = ["science"]
license = "MIT"
description = """
A software-based neuromorphic computing engine
"""

[dependencies]
bus = "2.3.0"
core_affinity = "0.7.6"
float-cmp = "0.9.0"
itertools = "0.10.5"
log = "0.4.17"
num_cpus = "1.14.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
simple-error = "0.2.3"
statrs = "0.16.0"
